# generate_ycm_conf

./: .gitignore  CMakeLists.txt
cmake/: Findboost.cmake  Findlibpng.cmake
gyc/: main.cpp
res/: inside_ycm.py
